Fix big relative to missing overflow

--- a/WebContent/assets/css/pimpmytrainee.css
+++ b/WebContent/assets/css/pimpmytrainee.css
@@ -3,6 +3,10 @@
 	padding: 0;
 }
 
+.container {
+	overflow: visible;
+}
+
 #login-page-background {
 	background-color: #efefef;
 	height: 100%;
